Project Icon Fix
Fixed css to stop project images from getting cut off

--- a/css/styles.css
+++ b/css/styles.css
@@ -1072,7 +1072,7 @@ a {
 
         .quill-img {
             width: 100%;
-            height: 200px;
+            height: 500px;
             object-fit: cover;
         }
 
